--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Fam-Cinet – Watch TV Shows Online, Watch Movies Online.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" href="file:///C:/Users/Ramiro/Documents/sebastian/123%20Acci%C3%B3n/Fam-Cinet-Favicon.png">
+	<link rel="shortcut icon" href="https://i.ibb.co/6JCPdmw/Fam-Cinet-Favicon.png">
   </head>
   <body>
 	  
     <header class="showcase">
       <div class="showcase-top">
-        <img src="file:///C|/Users/Ramiro/Documents/sebastian/Peliculas de Fam Cinet/imagenes/Diseños graficos/Logo-cur-famcint.png" alt="Netflix">
+        <img src="https://i.ibb.co/TwrCqBW/Logo-cur-famcint.png" alt="Netflix">
 		 
         <a class="btn btn-rounded" href="file:///C|/Users/Ramiro/Documents/sebastian/Aje/Netflix-Clone-main/Nexflix/netflix/index.html">Inicia Sesión</a>
       </div>
@@ -34,7 +34,7 @@
   <section class="kids">
     <div class="container">
       <div class="left">
-        <img src="kids.jpg" alt="">
+        <img src="https://i.ibb.co/hLysnk8/kids.jpg" alt="">
       </div>
       <div class="right">
         <h1>Crea perfiles para <br> Niños.</h1>
@@ -56,7 +56,7 @@ Xbox, Chromecast, Apple TV, Blu-ray
 jugadores y más.</p>
     </div>
     <div class="r-content">
-      <img src="tv.png" alt="">
+      <img src="https://i.ibb.co/mh4Z3cN/tv.png" alt="">
       <div class="video">
         <video src="video-tv.m4v" autoplay playsinline muted loop></video>
       </div>
@@ -69,17 +69,17 @@ jugadores y más.</p>
 
   <section class="stranger">
     <div class="mobile">
-      <img src="mobile.jpg" alt="">
+      <img src="https://i.ibb.co/9WPN07p/mobile.jpg" alt="">
       <div class="box">
         <div>
-          <img src="boxshot.png" alt="">
+          <img src="https://i.ibb.co/nCt1p7B/boxshot.png" alt="">
         </div>
         <div>
           <h2>Stranger Things</h2>
           <p>Descargando...</p>
         </div>
         <div>
-          <img class="gif" src="gif.gif" alt="">
+          <img class="gif" src="https://i.ibb.co/grHZCp6/gif.gif" alt="">
         </div>
       </div>
     </div>
@@ -97,7 +97,7 @@ jugadores y más.</p>
       <p>Transmita películas y TV ilimitadas <br> se muestra en su teléfono, tableta, computadora portátil, <br> y TV.</p>
     </div>
     <div class="mac">
-      <img src="tv2.png" alt="">
+      <img src="https://i.ibb.co/zSXWyc5/tv2.png" alt="">
       <div class="tv2">
         <video src="video-tv2.m4v" autoplay playsinline muted loop></video>
       </div>
